# physics-eater

./: .gitignore  Cargo.toml  README.md
infinity_names/: README.txt  collection_names.txt  damage_type_names.txt  effect_names.txt  item_names.txt  monster_class_names.txt  monster_names.txt  projectile_names.txt  sound_names.txt
src/: main.rs  namedb.rs  physics.rs  util.rs  wad.rs
src/physics/: m1.rs  m2.rs
