# This file is part of physics-eater, copyright 2023 Solra Bizna.
#
# physics-eater is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# physics-eater is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with physics-eater. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "physics-eater"
description = "Tool for examining Marathon physics files and converting them to JSON."
version = "0.1.0"
edition = "2021"
authors = ["Solra Bizna <solra@bizna.name>"]
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.7", features = ["derive", "wrap_help"]}
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"

